5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1723_2496.log
== TEST (2019-05-07 16:45:20) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	print(num)
	num = input(int("Digite um numero: "))
	
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num = input(int("Digite um numero: "))
ValueError: invalid literal for int() with base 10: 'Digite um numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:45:48) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	print(num)
	num = input(int("Digite um numero: "))
	
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num = input(int("Digite um numero: "))
ValueError: invalid literal for int() with base 10: 'Digite um numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:46:17) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	
	print(num)
	
	num = input(int("Digite um numero: "))
	
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    num = input(int("Digite um numero: "))
ValueError: invalid literal for int() with base 10: 'Digite um numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:47:01) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	
	num = input(int("Digite um numero: "))
	
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    num = input(int("Digite um numero: "))
ValueError: invalid literal for int() with base 10: 'Digite um numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:47:31) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	
	num = int(input("Digite um numero: "))
	
print(num)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:47:53) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	
	num = int(input("Digite um numero: "))
	
	print(num)
-- EXECUTION TIME:
0.21751
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
1075
333
-9
-1
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
32653
-10953
-1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:47:55) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	
	num = int(input("Digite um numero: "))
	
	print(num)
-- OUTPUT:
-525
1075
333
-9
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:49:14) 
-- CODE:
num = 0

while (num != -1):
	num = int(input("Digite um numero: "))
	total = num + 1
	print(total)
-- OUTPUT:
-524
1076
334
-8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:49:44) 
-- CODE:
num = 0

while (num != -1):
	num = int(input("Digite um numero: "))
	total = num + total
	print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = num + total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:50:13) 
-- CODE:
num = 0

while (num != -1):
	num = int(input("Digite um numero: "))
	total = num + num
	print(total)
-- OUTPUT:
-1050
2150
666
-18
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:52:08) 
-- CODE:
num = 0

while (num != -1):
	num = int(input("Digite um numero: "))
	total = num
	total = num + total
	print(total)
-- OUTPUT:
-1050
2150
666
-18
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:56:47) 
-- CODE:

i = 0
total = 0
while (total < 10): 
	i = i + 1
	total = total +i
	print(i, total)

-- OUTPUT:
1 1
2 3
3 6
4 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:00:22) 
-- CODE:
num = 0

while (num != -1):
	num = num
	total = num + total
	num = int(input("Digite um numero: "))

	print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = num + total
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:01:05) 
-- CODE:
num = 0

while (num != -1):
	total = num 
	total = num + total
	num = int(input("Digite um numero: "))

	print(total)
-- OUTPUT:
0
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:01:18) 
-- CODE:
num = 0

while (num != -1):
	total = num 
	total = num + total
	num = int(input("Digite um numero: "))

	print(total)
-- OUTPUT:
0
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:01:32) 
-- CODE:
num = 0

while (num != -1):
	total = num 
	total = num + total
	num = int(input("Digite um numero: "))

	print(total)
-- OUTPUT:
0
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:01:47) 
-- CODE:
num = 0

while (num != -1):
	total = num 
	total = num + total
	num = int(input("Digite um numero: "))

print(total)
-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:03:01) 
-- CODE:
num = 0

while (num != -1):
	total = num 
	num = total + total
	num = int(input("Digite um numero: "))

print(total)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:04:11) 
-- CODE:
num = 0

while (num != -1):
	total = num 
	total = num + num
	num = int(input("Digite um numero: "))

print(total)
-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:04:32) 
-- CODE:
num = 0

while (num != -1):
	total = num + num
	num = int(input("Digite um numero: "))

print(total)
-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:05:48) 
-- CODE:
num = 0

while (num != -1):
	total = num + num
	num = int(input("Digite um numero: "))

print(total)
-- EXECUTION TIME:
0.133747
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21906
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:07:45) 
-- CODE:
num = 0

while (num != -1):
	total = num + num + num
	num = int(input("Digite um numero: "))

print(total)
-- OUTPUT:
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:08:05) 
-- CODE:
num = 0

while (num != -1):
	total = num + num + num
	num = int(input("Digite um numero: "))

print(total)
-- EXECUTION TIME:
0.168591
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-27
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-32859
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:08:31) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
-- OUTPUT:
-16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:08:40) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
-- EXECUTION TIME:
0.18624
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-16
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
2
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:08:53) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
-- EXECUTION TIME:
0.204337
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-16
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
2
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:09:01) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
-- OUTPUT:
-16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:09:49) 
-- CODE:
num = 0

while (num != -1):
	num = num + 1
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
-- EXECUTION TIME:
0.179632
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-16
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
2
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:10:57) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:11:00) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
-- EXECUTION TIME:
0.147316
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21906
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:11:07) 
-- CODE:
num = 0

while (num != -1):
	total = num + num +1
	num = int(input("Digite um numero: "))

print(total)
-- EXECUTION TIME:
0.125878
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-17
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21905
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:11:11) 
-- CODE:
num = 0

while (num != -1):
	total = num + num + 1
	num = int(input("Digite um numero: "))

print(total)
-- OUTPUT:
-17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:14:26) 
-- CODE:
num = 0
i = 0
while (num != -1):
	num = num + 2**i
	i = i +1
	num = int(input("Digite um numero: "))

print(num)


-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:15:47) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)


-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:16:03) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)


-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:16:29) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
print(num)

-- OUTPUT:
-18
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:20:43) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
print(num)

-- OUTPUT:
-18
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:21:03) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)
print(num)

-- OUTPUT:
-18
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:21:22) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)

-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:21:24) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)

-- EXECUTION TIME:
0.15208
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21906
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:22:53) 
-- CODE:
num = 0

while (num != -1):
	total = num + num + 2
	num = int(input("Digite um numero: "))

print(total)

-- EXECUTION TIME:
0.122672
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-16
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
2
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:22:54) 
-- CODE:
num = 0

while (num != -1):
	total = num + num + 2
	num = int(input("Digite um numero: "))

print(total)

-- OUTPUT:
-16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:22:56) 
-- CODE:
num = 0

while (num != -1):
	total = num + num + 2
	num = int(input("Digite um numero: "))

print(total)

-- EXECUTION TIME:
0.141309
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-16
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
2
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:23:03) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)

-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:23:05) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)

-- EXECUTION TIME:
0.146839
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21906
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:24:11) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total1 = total + num
	num = int(input("Digite um numero: "))

print(total1)

-- OUTPUT:
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:25:13) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total1 = total + total
	num = int(input("Digite um numero: "))

print(total1)

-- OUTPUT:
-36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:25:32) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total1 = total - 2
	num = int(input("Digite um numero: "))

print(total1)

-- OUTPUT:
-20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:26:00) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total1 = total + num - 2
	num = int(input("Digite um numero: "))

print(total1)

-- OUTPUT:
-29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:26:07) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total1 = total + num - 2
	num = int(input("Digite um numero: "))

print(total1)

-- EXECUTION TIME:
0.143817
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-29
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-2
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-32861
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:26:12) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total1 = total + num 
	num = int(input("Digite um numero: "))

print(total1)

-- EXECUTION TIME:
0.150495
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-27
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-32859
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:20:23) 
-- CODE:
num = 0

while (num <= -1):
	total = num + num 
	total1 = total + num 
	num = int(input("Digite um numero: "))

print(total1)

-- EXECUTION TIME:
0.186895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2496/main.py", line 8, in <module>
    print(total1)
NameError: name 'total1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:20:53) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total1 = total + num 
	num = int(input("Digite um numero: "))

print(total1)

-- EXECUTION TIME:
0.154607
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-27
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-32859
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:21:00) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total1 = total + num 
	num = int(input("Digite um numero: "))

print(total1)

-- OUTPUT:
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:21:27) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total = int(input("Digite um numero: "))

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:21:41) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total = int(input("Digite um numero: "))

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:22:09) 
-- CODE:
num = 0

while (num != -1):
	total = num + num 
	total = int(input("Digite um numero: "))

print(total)

-- EXECUTION TIME:
0.120763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2496/main.py", line 5, in <module>
    total = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:22:37) 
-- CODE:
num = 0

while (num != -1):
	
	total = num + num 
	num = int(input("Digite um numero: "))

print(total)

-- EXECUTION TIME:
0.133534
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21906
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:22:51) 
-- CODE:
num = 0

while (num != -1):
	
	num = num + num 
	num = int(input("Digite um numero: "))

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:23:03) 
-- CODE:
num = 0

while (num != -1):
	
	num = num + num 
	num = int(input("Digite um numero: "))

print(num)

-- EXECUTION TIME:
0.201995
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-1
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:29:45) 
-- CODE:
num = 0

while (num != -1):

	total = num + num 
	num = int(input("Digite um numero: "))

print(total)

-- EXECUTION TIME:
0.187012
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21906
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:30:33) 
-- CODE:
num = 0

while (num != -1):
	
	total = num + num 
	print(total)
	num = int(input("Digite um numero: "))



-- OUTPUT:
0
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:30:48) 
-- CODE:
num = 0

while (num != -1):
	
	total = num + num 
	print(total)
	num = int(input("Digite um numero: "))



-- EXECUTION TIME:
0.124315
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-1050
2150
666
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0
21906
65306
-21906
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:32:45) 
-- CODE:
num = 0

while (num != -1):
	
	total = num + num 
	
	num = int(input("Digite um numero: "))
	
print(total)	



-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:33:54) 
-- CODE:
num = 0

while (num != -1):
	
	total = (num + num) 
	
	num = int(input("Digite um numero: "))
	
print(total)	



-- EXECUTION TIME:
0.20623
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-21906
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:33:55) 
-- CODE:
num = 0

while (num != -1):
	
	total = (num + num) 
	
	num = int(input("Digite um numero: "))
	
print(total)	



-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:36:24) 
-- CODE:
num = 0

while (num != -1):

	total = num + num 
	if(total == num + num):
	num = int(input("Digite um numero: "))
	
print(total)	



-- ERROR:
File "XXXX", line 7
    num = int(input())
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 19:36:30) 
-- CODE:
num = 0

while (num != -1):

	total = num + num 
	if(total == num + num):
		num = int(input("Digite um numero: "))
	
print(total)	



-- OUTPUT:
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:07:56) 
-- CODE:
num = 0

while (num != -1):
	num = total + num
	total = num + num 
	
		num = int(input("Digite um numero: "))
	
print(total)	



-- ERROR:
File "XXXX", line 7
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:08:15) 
-- CODE:
num = 0

while (num != -1):
	num = total + num
	total = num + num 
	num = int(input("Digite um numero: "))
	
print(total)	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = total + num
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:08:33) 
-- CODE:
num = 0
total= 0
while (num != -1):
	num = total + num
	total = num + num 
	num = int(input("Digite um numero: "))
	
print(total)	



-- OUTPUT:
1514
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:09:11) 
-- CODE:
num = 0
total= 0
while (num != -1):
	num = total + num
	total = num + num 
	num = int(input("Digite um numero: "))
	
print(total)	



-- OUTPUT:
1514
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:09:15) 
-- CODE:
num = 0
total= 0
while (num != -1):
	num = total + num
	total = num + num 
	num = int(input("Digite um numero: "))
	
print(total)	



-- EXECUTION TIME:
0.144958
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1514
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
196330
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:09:52) 
-- CODE:
num = 0
total= 0
while (num != -1):
	num = total + num
	total = num + num 
	num = int(input("Digite um numero: "))
	
print(total)	



-- OUTPUT:
1514
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:12:01) 
-- CODE:
num = 0
total= 0
while (num != -1):
	total = num + num
	total = total + num 
	num = int(input("Digite um numero: "))
	
print(total)	



-- OUTPUT:
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:15:05) 
-- CODE:
num = 0
total= 0
while (num != -1):
	total = num + num
	total = total + num 
	num = int(input("Digite um numero: "))
	
print(total)	



-- EXECUTION TIME:
0.162275
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-27
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-32859
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:16:18) 
-- CODE:
num = 0
total= 0
while (num != -1):
	num = total + num
	
	num = int(input("Digite um numero: "))
	total = num
print(total)	



-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:19:54) 
-- CODE:
num = 0
total= 0
while (num != -1):
	total = num
	num = total + num
	resto = total + num
	num = int(input("Digite um numero: "))
	
print(resto)	



-- OUTPUT:
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:23:21) 
-- CODE:
num = 0
total= 0
while (num != -1):
	total = num
	num = total + num
	resto = total + num
	num = int(input("Digite um numero: "))
	
print(resto)	



-- EXECUTION TIME:
0.207246
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-27
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-32859
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:24:06) 
-- CODE:
num = 0
total= 0
while (num != -1):
	
	num = total + num
	resto = total + num
	num = int(input("Digite um numero: "))
	total = num
print(resto)	



-- OUTPUT:
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:24:41) 
-- CODE:
num = 0
total= 0
while (num != -1):
	
	num = total + num
	resto = total + num
	num = int(input("Digite um numero: "))
	total = num
print(resto)	



-- OUTPUT:
-27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:27:19) 
-- CODE:
num = 0
total= 0
while (num != -1):

	resto = total + num
	num = int(input("Digite um numero: "))
	if(num != -1):
		total = resto + num
print(resto)	



-- OUTPUT:
1748
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:27:26) 
-- CODE:
num = 0
total= 0
while (num != -1):

	resto = total + num
	num = int(input("Digite um numero: "))
	if(num != -1):
		total = resto + num
print(resto)	



-- OUTPUT:
1748
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:28:27) 
-- CODE:
num = 0
total= 0
while (num != -1):

	resto = total + num
	num = int(input("Digite um numero: "))
	if(num != -1):
		total = resto + num
print(resto)	
print(total)


-- OUTPUT:
1748
1757
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:29:00) 
-- CODE:
num = 0
total= 0
while (num != -1):

	resto = total + num
	num = int(input("Digite um numero: "))
	if(num != -1):
		total = num + num
print(resto)	
print(total)


-- OUTPUT:
-27
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:29:16) 
-- CODE:
num = 0
total= 0
while (num != -1):

	resto = total + num
	num = int(input("Digite um numero: "))
	if(num != -1):
		total = num + num
print(resto)	
print(total)


-- OUTPUT:
-27
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:34:06) 
-- CODE:
num = int(input("Digite um numero: "))
total= 0
while (num != -1):
	total = total + num
	num = int(input("Digite um numero: "))	
print(total)


-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:34:24) 
-- CODE:
num = int(input("Digite um numero: "))
total= 0
while (num != -1):
	total = total + num
	num = int(input("Digite um numero: "))	
print(total)


-- EXECUTION TIME:
0.146971
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
